Javac support - Primary changes to repo, poms, readme, etc
Signed-off-by: Rob Stryker <rob@oxbeef.net>